parte principale con le prime 4 section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <header>
+    <header> <!--barra principale-->
       <div class="main-bar">
         <div class="logo">Logo</div>
         <div class="link">Link Link Link Link Link</div>
@@ -19,18 +19,20 @@
       </div>
     </header>
     <main>
-        <section>
-            
-
+        <section id="first-sec">
+            <div id="quadrato-rosa"></div>
         </section>
-        <section>
-
+        <section class="central-section">
+            <div class="pink-block"></div>
+            <div class="blue-block"></div>
         </section>
-        <section>
-
+        <section class="central-section2">
+            <div class="blue-block"></div>
+            <div class="pink-block"></div>
         </section>
-        <section>
-
+        <section class="central-section">
+            <div class="pink-block"></div>
+            <div class="blue-block"></div>
         </section>
         <section>
 
