--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
             <div class="pink-block"></div>
             <div class="blue-block"></div>
         </section>
-        <section>
-
+        <section id="big-section">
+            <div id="green-conteiner"></div>
         </section>
-        <section>
-
+        <section id="black-section">
+            <div id="coral-block"></div>
+            <div id="green-block">
+                <div class="remaining"></div>
+                <div class="remaining"></div>
+                <div class="remaining"></div>
+                <div class="remaining"></div>
+            </div>
         </section>
     </main>
     <footer></footer>
