--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="login">Login</div>
       </div>
     </header>
-    <main>
+    <main> <!--Contenuto centrale-->
         <section id="first-sec">
             <div id="quadrato-rosa"></div>
         </section>
@@ -47,6 +47,11 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer> <!--bottone & logo-->
+        <div id="footer-block">
+            <div id="bottone-logo">logo</div>
+            <div id="bottone-footer">bottone</div>
+        </div>
+    </footer>
 </body>
 </html>
